WexGit/Wex_DX/force-app/main/default/objects/Asset_Financials__c/Asset_Financials__c.object-meta.xml
<CustomObject>
    <label>Asset Financials</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Asset Financials Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Financials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>