WexGit/Wex_DX/force-app/main/default/objects/Asset_Financials__c/fields/Account_Asset__c.field-meta.xml
<CustomField>
    <fullName>Account_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Asset</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account_Asset__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Franchise</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account_Asset__c</referenceTo>
    <relationshipLabel>Asset Financials</relationshipLabel>
    <relationshipName>Asset_Financials</relationshipName>
    <type>Lookup</type>
</CustomField>