WexGit/Wex_DX/force-app/main/default/objects/Asset_Financials__c/fields/Child_Host__c.field-meta.xml
<CustomField>
    <fullName>Child_Host__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Host</label>
    <referenceTo>Child_Host__c</referenceTo>
    <relationshipLabel>Asset Financials</relationshipLabel>
    <relationshipName>Asset_Financials</relationshipName>
    <type>Lookup</type>
</CustomField>