WexGit/Wex_DX/force-app/main/default/objects/Asset_Financials__c/fields/Received__c.field-meta.xml
<CustomField>
    <fullName>Received__c</fullName>
    <label>Received</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>